6-postgress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db-service
    appType: voting-app
spec:
  type: ClusterIP
  selector:
    appType: voting-app
  ports:
    - name: http
      port: 5432
      targetPort: 5432
