9-result-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    app: result-service
    appType: voting-app
spec:
  type: NodePort
  selector:
    appType: voting-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31233
