11-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /result/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: result-service
            port:
              number: 80
